deploy/k8s/25-ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cnscpio-cp-registry
  namespace: cp-registry
spec:
  gateways:
  - default/cnscpio
  hosts:
  - cp.cnscp.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: registry
        port:
          number: 80
